Исправил эндопоинт nearby